# ChangeLog for dev-python/django-openid-auth
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -django-openid-auth-0.4.ebuild,
  +django-openid-auth-0.5.ebuild, metadata.xml:
  Version Bump; bump to EAPI=5 and new python r1 eclasses
