@@ -2,7 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Aug 2013; Johann Schmitz <ercpe@gentoo.org> django-openid-auth-0.5.ebuild:
+  Fixed dependencies; install examples
+
   11 Jun 2013; Justin Lecher <jlec@gentoo.org> -django-openid-auth-0.4.ebuild,
   +django-openid-auth-0.5.ebuild, metadata.xml:
   Version Bump; bump to EAPI=5 and new python r1 eclasses
-
